# engine

./: .gitignore  CMakeLists.txt  docs.txt  grammar.txt  todo.txt  words.txt
.github/workflows/: ccpp.yml
Engine/: Engine.sln
Engine/Engine/: Engine.cpp  Engine.vcxproj  Engine.vcxproj.filters  WinMain.cpp  WinMain.h  iostream.h  string.h
docs/obsibian/engine/: links.md
docs/obsibian/engine/.obsidian/: workspace
docs/obsibian/engine/Render/: Blending.md  Texturing.md
docs/obsibian/engine/unreviewed/: Fence.md  GPU Synchonization.md
docs/obsibian/knowledge/: links.md  materials.md  plan.md
docs/obsibian/knowledge/.obsidian/: graph.json  workspace
docs/obsibian/knowledge/engine/: Plan.md
docs/obsibian/knowledge/study/: Dictionary.md
docs/obsibian/knowledge/unreviewed/: Graphics Pipeline.md  Типы ресурсов.md
old/interpret/: ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  ast_visitor.h  class_def.cpp  environment.cpp  environment.h  interpreter.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.h  script.cpp  token.cpp
res/Shaders/: Default.hlsl  LightingUtil.hlsl  color.hlsl
res/scripts/: test.scr
src/: application.cpp  application.h  fps_lock.cpp  fps_lock.h  main.cpp  rectangle.cpp  rectangle.h  scene.cpp  scene.h  shape.cpp  shape.h
src/core/: CMakeLists.txt  any_value.h  assert.h  callabel.h  file_reader.cpp  file_reader.h  file_system.cpp  file_system.h  logger.cpp  logger.h  m_assert.h  m_math.cpp  m_math.h  object.h  types.h  value.cpp  value.h  value_impl.cpp  value_impl.h
src/graphics/: #scene.h#  CMakeLists.txt  rectangle.cpp  rectangle.h  scene.cpp  scene.h  shape.h
src/render/: CMakeLists.txt  model.cpp  model.h  render.cpp  render.h  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  shape.cpp  shape.h  utils.cpp  utils.h
src/render/d3d12Utils/: FrameResource.cpp  FrameResource.h  GeometryGenerator.h  d3dUtil.cpp  d3dUtil.h
src/script_system/: CMakeLists.txt  ast.h  ast_printer.cpp  ast_printer.h  ast_visitor.h  class_def.cpp  class_def.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  native_function.cpp  native_function.h  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  script.cpp  script.h  token.cpp  token.h
src/script_system/vm/: chunk.cpp  chunk.h  common.cpp  common.h  compiler.cpp  compiler.h  debug.cpp  debug.h  memory.cpp  memory.h  object.cpp  object.h  run.cpp  run.h  scanner.cpp  scanner.h  table.cpp  table.h  utils.cpp  utils.h  value.cpp  value.h  vm.cpp  vm.h  vm_debug.cpp  vm_memory.cpp  vm_run.cpp  vm_value.cpp  vm_value.h
tests/: CMakeLists.txt  script_test.cpp  value_test.cpp  vm_interpret.cpp  vm_scanner.cpp  vm_test.cpp
tests/math/: utils_tests.cpp
tests/script_system/: script_tests.cpp  vm_benchmark.cpp  vm_interpret.cpp  vm_scanner.cpp  vm_utils.cpp
